--- a/src/qt/res/css/light.css
+++ b/src/qt/res/css/light.css
@@ -109,7 +109,7 @@ color: #e9eaec;
 
 QLabel { /* Base Text Size & Color */
 font-size:12px;
-color:#767389;
+color:#42475D;
 font-family: "Nunito";
 }
 
@@ -881,7 +881,7 @@ QWidget .QFrame#frame .QLabel#labelWatchAvailable { /* Watch-only Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:14px;
 margin-left:16px;
-color: #767389;
+color: #42475D;
 font-weight: bold;
 }
 
@@ -891,7 +891,7 @@ min-width:160px;
 font-size:14px;
 margin-right:5px;
 padding-right:5px;
-color: #767389;
+color: #42475D;
 font-weight: bold;
 }
 
@@ -899,14 +899,14 @@ QWidget .QFrame#frame .QLabel#labelUnconfirmed { /* Pending Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:14px;
 margin-left:0px;
-color: #767389;
+color: #42475D;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchPending { /* Watch-only Pending Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:14px;
 margin-left:16px;
-color: #767389;
+color: #42475D;
 }
 
 QWidget .QFrame#frame .QLabel#labelImmatureText { /* Immature Balance Label */
@@ -915,7 +915,7 @@ min-width:160px;
 font-size:14px;
 margin-right:5px;
 padding-right:5px;
-color: #767389;
+color: #42475D;
 font-weight: bold;
 }
 
@@ -923,14 +923,14 @@ QWidget .QFrame#frame .QLabel#labelImmature { /* Immature Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:14px;
 margin-left:0px;
-color: #767389;
+color: #42475D;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchImmature { /* Watch-only Immature Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:14px;
 margin-left:16px;
-color: #767389;
+color: #42475D;
 }
 
 QWidget .QFrame#frame .QLabel#labelTotalText { /* Total Balance Label */
@@ -939,7 +939,7 @@ min-width:160px;
 font-size:14px;
 margin-right:5px;
 padding-right:5px;
-color: #767389;
+color: #42475D;
 font-weight: bold;
 }
 
@@ -947,14 +947,14 @@ QWidget .QFrame#frame .QLabel#labelTotal { /* Total Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:14px;
 margin-left:0px;
-color: #767389;
+color: #42475D;
 }
 
 QWidget .QFrame#frame .QLabel#labelWatchTotal { /* Watch-only Total Balance */
 qproperty-alignment: 'AlignVCenter | AlignLeft';
 font-size:14px;
 margin-left:16px;
-color: #767389;
+color: #42475D;
 }
 
 /* PRIVATESEND WIDGET */
@@ -1337,7 +1337,7 @@ padding-right:5px;
 QDialog#SendCoinsDialog .QPushButton#clearButton { /* Clear Button */
 background-color: #e9eaec;
 border:2px solid #ac9253;
-color: #767389;
+color: #42475D;
 padding-left:10px;
 padding-right:10px;
 }
@@ -1354,7 +1354,7 @@ border:1px solid #9e9e9e;
 QDialog#SendCoinsDialog .QPushButton#addButton { /* Add Button */
 background-color: #e9eaec;
 border:2px solid #ac9253;
-color: #767389;
+color: #42475D;
 padding-left:10px;
 padding-right:10px;
 }
@@ -1428,7 +1428,7 @@ background-color: transparent;
 min-width:102px;
 font-weight: bold;
 font-size:14px;
-color: #767389;
+color: #42475D;
 min-height:25px;
 margin-right:0px;
 padding-right:5px;
@@ -1613,7 +1613,7 @@ QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel {
 background-color: transparent;
 min-width:102px;
 font-size:14px;
-color: #767389;
+color: #42475D;
 min-height:25px;
 margin-right:0px;
 padding-right:5px;
@@ -1640,7 +1640,7 @@ font-weight: bold;
 QWidget#ReceiveCoinsDialog .QFrame#frame2 QPushButton#clearButton { /* Clear Button */
 background-color: #e9eaec;
 border:2px solid #ac9253;
-color: #767389;
+color: #42475D;
 padding-left:10px;
 padding-right:10px;
 }
@@ -1657,7 +1657,7 @@ border:1px solid #9e9e9e;
 QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#showRequestButton { /* Show Button */
 background-color: #e9eaec;
 border:2px solid #ac9253;
-color: #767389;
+color: #42475D;
 padding-left:10px;
 padding-right:10px;
 }
@@ -1672,7 +1672,7 @@ border:1px solid #9e9e9e;
 QWidget#ReceiveCoinsDialog .QFrame#frame QPushButton#removeRequestButton { /* Remove Button */
 background-color: #e9eaec;
 border:2px solid #ac9253;
-color: #767389;
+color: #42475D;
 padding-left:10px;
 padding-right:10px;
 }
@@ -1790,7 +1790,7 @@ QDialog#MasternodeCreateDialog .QLabel {
 background-color: transparent;
 min-width:102px;
 font-size:12px;
-color: #767389;
+color: #42475D;
 min-height:25px;
 margin-right:0px;
 padding-right:5px;
@@ -1808,14 +1808,14 @@ width:auto;
 }
 
 QDialog#MasternodeCreateDialog .QCheckBox {
-color: #767389;
+color: #42475D;
 font-size:12px;
 }
 
 QDialog#MasternodeCreateDialog .QPushButton#btClose {
 background-color: #e9eaec;
 border:2px solid #ac9253;
-color: #767389;
+color: #42475D;
 }
 
 QDialog#MasternodeCreateDialog .QButton {
@@ -1830,7 +1830,7 @@ QDialog#MasternodeCreateDialog .QProgressBar { /* PrivateSend Completion */
 border: 1px solid #818181;
 border-radius: 1px;
 text-align: center;
-color:#767389;
+color:#42475D;
 margin-top: 5px;
 }
 
